vis_phewas/static/mainapp/css/index.css
html, body, .container-fluid {
    height: 100%;
    margin: 0;
    padding: 0;
}

.row {
    height: 100%;
}

.col-md-6 {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.col-md-6.left-column {
    padding: 0;
    width: 100%; /* Full width initially */
    transition: width 0.5s ease; /* Smooth transition for width change */
}

#sigma-container {
    width: 100%;
    height: 100%;
}

.right-column {
    display: flex;
    flex-direction: column;
    background-color: lightgray;
    height: 100%;
    padding: 0;
    overflow-y: auto;
}

#info-container {
    max-width: 100%;
    height: 100%;
    display: none; /* Hide the right panel initially */
    width: 50%;
    transition: width 0.5s ease; /* Smooth transition for width change */
    overflow-y: auto;
}

table {
    width: 100%;
    table-layout: fixed;
}

th, td {
    padding: 8px 12px;
    text-align: left;
    border: 1px solid #ddd;
}

body {
    font-family: Arial, sans-serif;
}

.toolbar {
    padding-top: 10px;
    background-color: #f9f9f9;
}

.filter-group {
    margin-bottom: 10px;
}

.filter-group label {
    margin-right: 10px;
}

.filter-group select,
.filter-group input,
.filter-group button {
    margin-right: 10px;
}

.left-column {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

#sigma-container {
    flex-grow: 1;
    width: 100%;
}

.toolbar-wrapper {
    width: 100%;
    max-height: 50%;
    overflow-y: auto;
    overflow-x: hidden;

}

#filters-container {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
}

.filter-group {
    flex: 1 1 33%;
    box-sizing: border-box;
    padding: 5px;
}

.filter-group {
    flex: 1 1 25%;
    box-sizing: border-box;
    padding: 5px;
    display: flex;
    flex-direction: column;
}

.filter-group label,
.filter-group select,
.filter-group input,
.filter-group button {
    width: 100%;
    margin-bottom: 5px;
}

@media (max-width: 1024px) {
    .filter-group {
        flex: 1 1 50%;
    }
}

@media (max-width: 768px) {
    .filter-group {
        flex: 1 1 100%;
    }

    .filter-group label,
    .filter-group select,
    .filter-group input,
    .filter-group button {
        font-size: 0.8em;
        padding: 5px;
    }

    .filter-input {
        width: 100%;
    }

    .toolbar {
        font-size: 0.8em;
        padding: 5px;
    }
}

#toolbar-buttons {
    display: flex;
    width: 100%;
    justify-content: center;
    background-color: aliceblue;
    padding-top: 1%;
    padding-bottom: 1%;
    border-bottom: 1px solid #ccc;

}

#toolbar-buttons button {
    margin: 0 5px;
}

